# ATOM

./: .gitignore  README.md  bench.py  bench_all.sh  pyproject.toml  run_server.sh
.github/benchmark/: models.json  oot_models_accuracy.json
.github/scripts/: atom_test.sh
.github/workflows/: atom-benchmark.yaml  atom-test.yaml  atom-vllm-oot-test.yaml  docker-release.yaml
atom/: __init__.py  config.py
atom/entrypoints/: openai_server.py
atom/entrypoints/openai/: api_server.py  protocol.py  serving_completion.py
atom/model_engine/: arg_utils.py  block_manager.py  engine_core.py  engine_core_mgr.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
atom/model_loader/: loader.py
atom/model_ops/: attention.py  attention_mha.py  attention_mla.py  embed_head.py  layernorm.py  linear.py  moe.py  utils.py
atom/model_ops/attentions/: backends.py
atom/models/: deepseek_v2.py  llama.py  qwen3.py  qwen3_5.py
atom/utils/: backends.py  context.py  envs.py  forward_context.py
docker/: Dockerfile
docs/: DOCUMENTATION_AUDIT_REPORT.html
scripts/performance/: benchmark.sh  save_csv.py
